--- a/assets/styles.css
+++ b/assets/styles.css
@@ -65,6 +65,23 @@
     --bs-breadcrumb-divider-color:var(--bs-breadcrumb-divider-color);
 }
 
+div .tarjetas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 5rem;
+}
+img.card-img-top{
+    height: 8.5rem;
+}
+h3.card-title{
+    text-align: center;
+    color: #333333;
+    font-weight: bolder;
+}
+p.card-text{
+    text-align: center;
+}
 @media screen and (max-width: 767px)
 {.jumbotron h1 {
     font-size: 32px !important;
