--- a/assets/styles.css
+++ b/assets/styles.css
@@ -99,3 +99,105 @@ p.card-text{
     margin-left: 16.66666667%;
 }
 }
+
+/* rocio */
+#cajauno{
+    border: 0.2rem solid #f9a822;
+    background-color: #fffaf3;
+    border-radius: 1rem;
+
+}
+
+#primeror{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#boton1{
+    background-color: #2e7d33;
+    color: white;
+    border-radius: 20px;
+    font-size: 18px;
+}
+
+
+h5, #subtit{
+    font-weight: bold;
+}
+
+.card-body{
+    font-size: 1.3rem;
+}
+
+#cards{
+    gap: 3rem;
+
+}
+
+/* gaston */
+
+/* footer */
+
+.bg-gray {
+    background-color: #f2f2f2;
+    padding: 3vh 0vh 5vh;
+}
+
+.border-azul {
+    border: 2px solid #0072bb;
+    background-color: #F3FAFF;
+    padding: 8px;
+}
+
+.p-class {
+    font-size: 16px;
+}
+
+.bg-celeste {
+    background-color: #F3FAFF;
+}
+
+.bg-azul {
+    background-color: #37bbed;
+}
+
+.primero-la-gente {
+    padding-bottom: 4vh;
+}
+
+a {
+    color:#0072bb;
+}
+
+.padding-bottom {
+    padding-bottom: 3vh;
+}
+
+h5 {
+    padding-bottom: 2vh;
+}
+
+.a-no-deco {
+    text-decoration: none;
+    color: #333;
+}
+
+.a-no-deco:hover {
+    color: gray;
+}
+
+
+@media (max-width: 576px) {
+    .media-small-container {
+        margin: 1vh 1vw;
+    }
+
+    .p-class {
+        font-weight: 500 !important; /* originalmente era para darle font-weight, pero también puse color y tamaño especificado en la página de AP */
+        font-size: 15px;
+        color: #333;
+    }
+    .border-azul {
+        width: 90vw;
+    }
+}
